# xml_language_tag_parser

./: Cargo.toml  README.md  docs.md  makefile
src/: grammar.pest  lib.rs  main.rs
tests/: xml_parser_tests.rs
